# gizmosql-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  sync-version.yml
src/gizmosql/: __init__.py  _install.py  _version.py  server.py
tests/: test_smoke.py
