[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "gizmosql"
dynamic = ["version"]
description = "Python wrapper that runs a GizmoSQL Flight SQL server as a subprocess (download-on-first-use, no compilation)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "GizmoData LLC", email = "info@gizmodata.com" },
]
keywords = [
  "gizmosql", "duckdb", "sql", "server", "flight-sql", "arrow",
  "test-fixture", "subprocess",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Testing",
]

# Runtime deps are deliberately tiny. The package itself just manages a
# subprocess + does an HTTP download on first use; we don't pull in
# anything heavy unless the user asks for the optional ADBC client.
dependencies = []

[project.optional-dependencies]
# `pip install gizmosql[adbc]` brings in the ADBC Flight SQL driver so
# `Server.connect()` can hand back a live connection.
adbc = [
  "adbc-driver-gizmosql>=1.0",
  "pyarrow>=15",
]
test = [
  "pytest>=7",
  "adbc-driver-gizmosql>=1.0",
  "pyarrow>=15",
]

[project.urls]
Homepage = "https://gizmodata.com/gizmosql"
Documentation = "https://docs.gizmosql.com"
QuickStart = "https://docs.gizmosql.com/#/quickstart"
Source = "https://github.com/gizmodata/gizmosql-py"
Releases = "https://github.com/gizmodata/gizmosql/releases"
Issues = "https://github.com/gizmodata/gizmosql-py/issues"

[tool.hatch.version]
# Single source of truth: package version is read from src/gizmosql/_version.py.
# Bump that file (and the matching git tag) when GizmoSQL releases a new tag.
path = "src/gizmosql/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gizmosql"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

# ---- ruff (linter + formatter) ----
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PT"]
ignore = [
  "E501",  # line length, handled by formatter
]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra:    show extra summary info for non-passing tests
# Don't add -q here — it would override `-v` on the command line and hide
# per-test output that we explicitly want visible in CI.
addopts = "-ra"
markers = [
  "network: tests that hit the public internet (downloads from GitHub)",
]
